# lua-blkid

./: CMakeLists.txt  README.txt  blkid.nobj.lua  lua-blkid-scm-0.rockspec  test.lua
src/: blkid.nobj.lua  blkid.nobj.pre_generated.c
